--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ matrix:
   include:
   - python: 3.6.6
     name: "python3.6"
+    env: PYTHONPATH=scuts
   - python: 3.7.2
     name: "python3.7"
+    env: PYTHONPATH=scuts
 install: 
     - pip install -r requirements-dev.txt
 script:
